--- a/static/index.html
+++ b/static/index.html
@@ -18,7 +18,6 @@
         let peers = new Peering("#peers", local.getStream(), signals)
 
         signals.addEventListener("connected", async (event) => {
-          console.log("connected to signaling server", event)
           await local.onConnected()
           await peers.onConnected()
 
@@ -26,41 +25,38 @@
         })
 
         signals.addEventListener("join", async (event) => {
-          console.log("got join", event.join)
           let offer = await peers.onJoin(event.detail)
           signals.sendOffer(event.detail.peerId, offer)
         })
 
+        signals.addEventListener("leave", async (event) => {
+          await peers.onLeave(event.detail)
+        })
+
         signals.addEventListener("offer", async (event) => {
-          console.log("got offer", event)
-          let answer = await peers.onOffer(event.detail)
+            let answer = await peers.onOffer(event.detail)
           signals.sendAnswer(event.detail.peerId, answer)
         })
 
         signals.addEventListener("icecandidate", async (event) => {
-          console.log("got ice candidate", event)
           peers.onICECandidate(event.detail)
         })
 
         signals.addEventListener("answer", async (event) => {
-          console.log("got answer", event)
           await peers.onAnswer(event.detail)
         })
 
-        signals.addEventListener("leave", async (event) => {
-          console.log("got leave", event)
-          await peers.onLeave(event.detail)
-        })
-
         signals.addEventListener("disconnected", async (event) => {
-          console.log("disconnected from signaling server", event)
-
           await local.onDisconnected()
           await peers.onDisconnected()
         })
 
         let isHTTPS = location.protocol !== 'https:'
         signals.connect((isHTTPS ? "ws" : "wss") + "://" + location.host + "/room")
+
+        window.addEventListener("unload", function() {
+          signals.sendLeave()
+        });
       })
     </script>
   </body>
