--- a/static/index.html
+++ b/static/index.html
@@ -1,1 +1,63 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Club"/><link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"/><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Ryan's Boom Boom Room</title></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,f,l=r[0],i=r[1],a=r[2],c=0,s=[];c<l.length;c++)f=l[c],Object.prototype.hasOwnProperty.call(o,f)&&o[f]&&s.push(o[f][0]),o[f]=0;for(n in i)Object.prototype.hasOwnProperty.call(i,n)&&(e[n]=i[n]);for(p&&p(r);s.length;)s.shift()();return u.push.apply(u,a||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var i=t[l];0!==o[i]&&(n=!1)}n&&(u.splice(r--,1),e=f(f.s=t[0]))}return e}var n={},o={1:0},u=[];function f(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,f),t.l=!0,t.exports}f.m=e,f.c=n,f.d=function(e,r,t){f.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},f.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},f.t=function(e,r){if(1&r&&(e=f(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(f.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)f.d(t,n,function(r){return e[r]}.bind(null,n));return t},f.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return f.d(r,"a",r),r},f.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},f.p="/";var l=this.webpackJsonpfrontend=this.webpackJsonpfrontend||[],i=l.push.bind(l);l.push=r,l=l.slice();for(var a=0;a<l.length;a++)r(l[a]);var p=i;t()}([])</script><script src="/static/js/2.88773076.chunk.js"></script><script src="/static/js/main.5d2a4760.chunk.js"></script></body></html>
+<!DOCTYPE html>
+<html>
+  <head>
+    <script src="/js/localmedia.js"></script>
+    <script src="/js/peering.js"></script>
+    <script src="/js/signaling.js"></script>
+  </head>
+  <body>
+    <div id="local">
+      <video autoplay muted></video>
+    </div>
+    <div id="peers"></div>
+
+    <script type="text/javascript">
+      let local = new LocalMedia("#local")
+      local.setupMedia().then(() => {
+        let signals = new SignalingServer()
+        let peers = new Peering("#peers", local.getStream(), signals)
+
+        signals.addEventListener("connected", async (event) => {
+          await local.onConnected()
+          await peers.onConnected()
+
+          signals.sendJoin()
+        })
+
+        signals.addEventListener("join", async (event) => {
+          let offer = await peers.onJoin(event.detail)
+          signals.sendOffer(event.detail.peerId, offer)
+        })
+
+        signals.addEventListener("leave", async (event) => {
+          await peers.onLeave(event.detail)
+        })
+
+        signals.addEventListener("offer", async (event) => {
+            let answer = await peers.onOffer(event.detail)
+          signals.sendAnswer(event.detail.peerId, answer)
+        })
+
+        signals.addEventListener("icecandidate", async (event) => {
+          peers.onICECandidate(event.detail)
+        })
+
+        signals.addEventListener("answer", async (event) => {
+          await peers.onAnswer(event.detail)
+        })
+
+        signals.addEventListener("disconnected", async (event) => {
+          await local.onDisconnected()
+          await peers.onDisconnected()
+        })
+
+        let isHTTPS = location.protocol !== 'https:'
+        signals.connect((isHTTPS ? "ws" : "wss") + "://" + location.host + "/room")
+
+        window.addEventListener("unload", function() {
+          signals.sendLeave()
+        });
+      })
+    </script>
+  </body>
+</html>
