--- a/static/examples/audio.html
+++ b/static/examples/audio.html
@@ -12,7 +12,7 @@
     </style>
     <script type="text/javascript">
       async function start() {
-
+        // Poly from https://developer.mozilla.org/en-US/docs/Web/API/MediaDevices/getUserMedia
         // Older browsers might not implement mediaDevices at all, so we set an empty object first
         if (navigator.mediaDevices === undefined) {
           navigator.mediaDevices = {};
