fix: reducing x scope and redeclaring constant

--- a/static/examples/audio.html
+++ b/static/examples/audio.html
@@ -66,10 +66,9 @@
             n_samples = 44100,
             curve = new Float32Array(n_samples),
             deg = Math.PI / 180,
-            i = 0,
-            x;
+            i = 0;
           for ( ; i < n_samples; ++i ) {
-            x = i * 2 / n_samples - 1;
+            const = x = i * 2 / n_samples - 1;
             curve[i] = ( 3 + k ) * x * 20 * deg / ( Math.PI + k * Math.abs(x) );
           }
           return curve;
