--- a/static/examples/audio.html
+++ b/static/examples/audio.html
@@ -68,7 +68,7 @@
             deg = Math.PI / 180,
             i = 0;
           for ( ; i < n_samples; ++i ) {
-            const = x = i * 2 / n_samples - 1;
+            const x = i * 2 / n_samples - 1;
             curve[i] = ( 3 + k ) * x * 20 * deg / ( Math.PI + k * Math.abs(x) );
           }
           return curve;
@@ -101,7 +101,6 @@
               gainNode.connect(delay);
               delay.connect(audioCtx.destination);
               voiceChange();
-              console.log('gain: ', gainNode)
             })
             .catch( function(err) { console.log('The following gUM error occured: ' + err);})
         } else {
@@ -111,6 +110,7 @@
         function voiceChange() {
 
           distortion.oversample = '4x';
+          console.log(audioCtx);
           biquadFilter.gain.setTargetAtTime(0, audioCtx.currentTime, 0)
 
           let voiceSetting = voiceSelect.value;
