fix: mute->stop

--- a/golang/static/examples/screenshare.html
+++ b/golang/static/examples/screenshare.html
@@ -6,7 +6,7 @@
         height: 320px;
         width: 480px;
       }
-      .mute, .start {
+      .stop, .start {
         cursor: pointer;
       }
     </style>
@@ -119,6 +119,6 @@
       <video id="remote" autoplay controls></video>
     </div>
     <input id="start" class="start" type="button" value="Start Screenshare" onclick="start()"/>
-    <input id="start" class="start" type="button" value="Stop Screenshare" onclick="stopCapture()"/>
+    <input id="stop" class="stop" type="button" value="Stop Screenshare" onclick="stopCapture()"/>
   </body>
 </html>
