Working groups. Need to add tests

--- a/golang/static/examples/groups.html
+++ b/golang/static/examples/groups.html
@@ -25,7 +25,7 @@
           await local.onConnected()
           await peers.onConnected()
 
-          signals.sendJoin("group_a")
+          signals.sendJoin("test")
         })
 
         signals.addEventListener("join", async (event) => {
