Added event target shim

--- a/golang/static/index.html
+++ b/golang/static/index.html
@@ -8,9 +8,10 @@
       width: 33%;
     }
   </style>
-  <script src="./js/localmedia.js"></script>
-  <script src="./js/peering.js"></script>
-  <script src="./js/signaling.js"></script>
+  <script src="/js/event-target.js"></script>
+  <script src="/js/localmedia.js"></script>
+  <script src="/js/peering.js"></script>
+  <script src="/js/signaling.js"></script>
 </head>
 
 <body>
