--- a/golang/static/examples/groups.html
+++ b/golang/static/examples/groups.html
@@ -7,6 +7,7 @@
         width: 33%;
       }
     </style>
+    <script src="/js/event-target.js"></script>
     <script src="/js/localmedia.js"></script>
     <script src="/js/peering.js"></script>
     <script src="/js/signaling.js"></script>
