- Adds 'make run-pretty' option to format log output in a more human-readable way. - Fixes typos in a couple places - Adds static/examples/mirror.html, which synthesizes a video source and acts as a peer. - Adds links to other examples to bottom of static/index.html - Adds js/mirrormedia.js which uses a Canvas to create a peer video stream. - In peering.js, add a 1-second delay before manually firing .play() on a newly created video element. This resolves random issues where even an autoplay video element doesn't start playing automatically.

--- a/golang/static/index.html
+++ b/golang/static/index.html
@@ -62,9 +62,17 @@
       signals.connect((isHTTPS ? "ws" : "wss") + "://" + location.host + "/room")
       window.addEventListener("unload", function () {
         signals.sendLeave()
-      });
+      })
     })
   </script>
+
+  <hr>
+  <a href="/examples/audio.html">audio.html</a>
+  <a href="/examples/groups.html">groups.html</a>
+  <a href="/examples/local.html">local.html</a>
+  <a href="/examples/peer.html">peer.html</a>
+  <a href="/examples/peer.html">stun.html</a>
+  <a href="/examples/mirror.html">mirror.html</a>
 </body>
 
 </html>
